@@ -133,4 +133,5 @@ Note on version conventions:
 1.07 xxx yyyy-mm-dd
         - Fixed POD issues and improve code formatting
         - Improve code coverage.
-	- Allow building an infinite (i.e. unbounded) set of spans.
+        - Allow building an infinite (i.e. unbounded) set of spans.
+        - Define separate functions to obtain the computus elements: golden number, epact, sunday letter
